--- a/index.html
+++ b/index.html
@@ -2187,7 +2187,7 @@
 						$(".chindividual:visible:first a").click();
 					}
 				});
-				$(".channels:first").click();
+				//$(".channels:first").click();
 
 				$("body").on("keydown",function(){
 					$("#channelFilter").focus();
